Add README and update lesson 1

--- a/1_the_basics.ipynb
+++ b/1_the_basics.ipynb
@@ -9,7 +9,7 @@
     "## Lesson 1: the basics\n",
     "Hello! This is Jupyter notebook. In it, you can run python code, edit it, and run it again.\n",
     "\n",
-    "I will give you a progressively harder series of excercises. Keep working at them until they run successfully. Select a cell (blocks of code with a grey background) and click Run (above) or type Shift + Enter. The code will run and the result of the code will print below it."
+    "In this notebook, there are a few short excercises to get you acquainted with the basics of Python, and programming languages in general. Anything that is marked **todo** will require you to run the code, change it to complete the exercise, and run it again. To run the code, select a code cell (grey background) and click Run (above) or type Shift + Enter. The code will run and the result of the code will print below it, as well as any print statements that were made."
    ]
   },
   {
