--- a/1_the_basics.ipynb
+++ b/1_the_basics.ipynb
@@ -2,21 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Lesson 1: the basics\n",
     "Hello! This is Jupyter notebook. In it, you can run python code, edit it, and run it again.\n",
     "\n",
-    "In this notebook, there are a few short excercises to get you acquainted with the basics of Python, and programming languages in general. Anything that is marked **todo** will require you to run the code, change it to complete the exercise, and run it again. To run the code, select a code cell (grey background) and click Run (above) or type Shift + Enter. The code will run and the result of the code will print below it, as well as any print statements that were made."
+    "In this notebook, there are a few short excercises to get you acquainted with the basics of Python, and programming languages in general. Anything that is marked **todo** will require you to run the code, change it to complete the exercise, and run it again. \n",
+    "\n",
+    "To run the code, select a code cell (grey background) and click Run (above) or type Shift + Enter. The code will run and the result of the code will print below it, as well as any print statements that were made."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### 1 - Hello World\n",
     "The quintessential first program: make the code say \"Hello World\". \n",
@@ -26,21 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(\"hello world\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### 2 - Variables\n",
     "Like in algebra, we can represent unknowns in Python using variables.\n",
@@ -50,12 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "name = \"Heather\"\n",
     "print(\"Hello\" + name)"
@@ -63,28 +53,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "In this case, `name` is the variable and it contains the object \"Heather\".\n",
     "\n",
-    "You can be change variables by reassigning them.\n",
+    "You can change variables by reassigning them.\n",
     "\n",
     "**todo:** Get the following code to count down to 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "count = 3\n",
     "print(\"Countdown!\")\n",
+    "count = 3\n",
     "print(count)\n",
     "count = 2\n",
     "print(count)"
@@ -92,9 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### 3 - Types\n",
     "Everything in python has a type. So far we have seen objects with 3 kinds of types."
@@ -102,12 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(type(\"hello world\"))\n",
     "print(type(3))\n",
@@ -116,40 +96,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "type(3) == int"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "You can see a full list of Python's default (built-in) types [here](http://www.informit.com/articles/article.aspx?p=453682&seqNum=5) (table 3.1).\n",
     "\n",
     "There are a lot of types and you don't need to worry about most of them for now. \n",
     "The most important to know are `int, float, bool, str`. In future lessons, we will cover `list, xrange, dict`, and the ones you will need to become a competent Python programmer are `set, tuple, object`.\n",
     "\n",
-    "These are called built-in because they are the types that Python comes with, but you can always create your own, which is a more advanced topic."
+    "These are called built-in because they are the types that Python comes with, but you can always create your own, which is a more advanced topic for later."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "print(type(3.41))  # floats are numbers with a decimal\n",
+    "print(type(3.14))  # floats are numbers with a decimal\n",
     "print(type(None))  # None is used to define a null object\n",
     "print(type(True))\n",
     "print(type(False))  # booleans are useful for comparisons\n",
@@ -159,18 +131,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
-    "The orange texts are comments. Python will not evaluate them."
+    "The text after the `#` are comments. Python will not evaluate them. They are useful for describing something to the person reading the code."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### 4 - Typecasting\n",
     "You can get Python to (try to) change the type of an object. This process is known as typecasting."
@@ -178,58 +146,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "print(int(3.14))  # cast a float (non-whole number) to an integer (whole number)\n",
+    "print(float(3))   # cast an int to a float\n",
+    "\n",
     "num_apples = 5\n",
-    "print(type(num_apples))\n",
-    "num_apples = str(num_apples)\n",
+    "print(type(num_apples))       # currently an int\n",
+    "\n",
+    "num_apples = str(num_apples)  # change it to a str (a string of characters)\n",
     "print(type(num_apples))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
+   "source": [
+    "Python will \"throw an error\" if it can't change the object you pass it into the type you want."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int(\"not an integer\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Why do these print different results?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "print(2 + int('2'))\n",
-    "print(str(2) + '2')"
+    "print(1 + int('1'))\n",
+    "print(str(1) + '1')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "**todo:** Print \"99 bottles of beer on the wall\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "num_bottles = 99\n",
     "print(99 + \" bottles of beer on the wall\")"
@@ -237,19 +212,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
-    "### 5 - Built-in functions\n",
+    "### 5 - Built-in types and functions\n",
     "By default, different types of objects have different things you can do with them"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "#### Numbers (int and float) [list of functions](https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex)\n",
     "You can already use Python like a fancy calculator"
@@ -257,12 +228,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "g = 9.81\n",
     "v = 1.23452\n",
@@ -273,9 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "#### Strings [list of functions](https://docs.python.org/3/library/stdtypes.html#string-methods)\n",
     "You can do a lot with strings out of the box. Here are some of the basic methods.\n",
@@ -285,12 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "string = \"hello World  \"\n",
     "\n",
@@ -303,9 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Booleans [list of functions](https://docs.python.org/3/library/stdtypes.html#boolean-operations-and-or-not)\n",
     "You can use `<, >, ==, <=, >=, and, or` to compare values. They will return a boolean, either `True` or `False`.\n",
@@ -315,12 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(\"Math comparisons\")\n",
     "print(10 > 9)\n",
@@ -348,9 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### End of lesson 1\n",
     "That's it for now! Please let me know roughly how long it took to get through and give me any feedback you feel is helpful.\n",
@@ -361,9 +317,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (Anaconda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "anaconda3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -375,9 +331,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
